--- a/public/index.html
+++ b/public/index.html
@@ -70,7 +70,7 @@
       </ul>
       <h2>GitHub</h2>
       <ul id="github" class="clearfix">
-        <li> <div class="emoji-button"><img src="/graphics/emojis/+1.png" height="22" width="22"> :+1:</div></li>
+        <li><div class="emoji-button"><img src="/graphics/emojis/+1.png" height="22" width="22"> :+1:</div></li>
         <li><div class="emoji-button"><img src="/graphics/emojis/-1.png" height="22" width="22"> :-1:</div></li>
         <li><div class="emoji-button"><img src="/graphics/emojis/airplane.png" height="22" width="22"> :airplane:</div></li>
         <li><div class="emoji-button"><img src="/graphics/emojis/apple.png" height="22" width="22"> :apple:</div></li>
@@ -158,7 +158,8 @@
     </div>
     <div id="footer">
       <p>This page was created by <a href="http://arvidandersson.se">Arvid Andersson</a> at 
-        <a href="http://oktavilla.se">Oktavilla</a>.
+        <a href="http://oktavilla.se">Oktavilla</a>. Code available on 
+        <a href="https://github.com/arvida/emoji-cheat-sheet.com">GitHub</a>.</p>
       <p>✔ Emoji-cheat-sheet.com is not affiliated with 37signals, LLC. or GitHub Inc. in any way.</p>
       <p>❤ Built using bits from <a href="http://www.steamdev.com/zclip">zClip</a>, 
         <a href="http://subtlepatterns.com/">SubtlePatterns</a> and 
