--- a/public/index.html
+++ b/public/index.html
@@ -25,10 +25,10 @@
       <h1>Emoji cheat sheet</h1>
       <p class="intro">
       <a href="http://en.wikipedia.org/wiki/Emoji">Emoji</a> emoticons are supported on
-      <a href="http://campfirenow.com/" class="product">Campfire</a>,
-      <a href="http://github.com/" class="product">GitHub</a>,
-      <a href="http://37signals.com/basecampnext/" class="product">Basecamp Next</a>
-      and <a href="http://turntable.fm/" class="product">Turntable.fm</a>.<br>
+      <a href="http://campfirenow.com/">Campfire</a>,
+      <a href="http://github.com/">GitHub</a>,
+      <a href="http://37signals.com/basecampnext/">Basecamp Next</a>
+      and <a href="http://turntable.fm/">Turntable.fm</a>.<br>
       However some of the emoji codes are not super easy to remember, <em>so here is a little cheat sheet</em>.<br>
       ✈<b> Got flash enabled? Click the emoji code and it will be copied to your clipboard.</b> </p>
       <h2>People</h2>
