--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
     </script>
   </head>
   <body>
-    <div id="content">
+    <div id="content" class="wrap">
       <h1>Emoji cheat sheet</h1>
       <p class="intro">
       <a href="http://en.wikipedia.org/wiki/Emoji">Emoji</a> emoticons are supported on
@@ -577,7 +577,7 @@
     </div>
     <a href="https://github.com/arvida/emoji-cheat-sheet.com"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://a248.e.akamai.net/assets.github.com/img/e6bef7a091f5f3138b8cd40bc3e114258dd68ddf/687474703a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f7265645f6161303030302e706e67" alt="Fork me on GitHub"></a>
     <div id="flash-test"></div>
-    <div id="footer">
+    <div id="footer" class="wrap">
       <p>This page was created by <a href="http://arvidandersson.se">Arvid Andersson</a> /
         <a href="http://twitter.com/arvid_a">@arvid_a</a> at
         <a href="http://oktavilla.se">Oktavilla</a>. Source code is available on
