--- a/public/index.html
+++ b/public/index.html
@@ -600,7 +600,7 @@
         <a href="http://subtlepatterns.com/">SubtlePatterns</a> and
         <a href="http://www.givainc.com/labs/jnotify_jquery_plugin.htm">jnotify</a>.</p>
     </div>
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
     <script src="/libs.min.js?1"></script>
     <script>
       $(function() {
