removed stray nestings etc

--- a/public/index.html
+++ b/public/index.html
@@ -545,38 +545,30 @@
         <li><div><img src="/graphics/emojis/tm.png"> :tm:</div></li>
         <li><div><img src="/graphics/emojis/shipit.png"> :shipit:</div></li>
       </ul>
-      <div class="sounds">
-        <h3>Campfire also supports a few sounds</h3>
-        <ul id="campfire_sounds" class="buttons clearfix">
-          <li><div>/play secret</div></li>
-          <li><div>/play trombone</div></li>
-          <li><div>/play crickets</div></li>
-          <li><div>/play rimshot</div></li>
-          <li><div>/play vuvuzela</div></li>
-          <li><div>/play tmyk</div></li>
-          <li><div>/play live</div></li>
-          <li><div>/play drama</div></li>
-          <li><div>/play yeah</div></li>
-          <li><div>/play greatjob</div></li>
-          <li><div>/play pushit</div></li>
-          <li><div>/play nyan</div></li>
-          <li><div>/play tada</div></li>
-          <li><div>/play ohmy</div></li>
-          <li><div>/play bueller</div></li>
-          <li><div>/play ohyeah</div></li>
-        </ul>
-      </div>
-      <div class="share">
-        <div id="twitter">
-          <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://www.emoji-cheat-sheet.com/" data-count="vertical">Tweet</a>
-        </div>
-        <div id="fb">
-          <iframe src="//www.facebook.com/plugins/like.php?href=http%3A%2F%2Fwww.emoji-cheat-sheet.com&amp;send=false&amp;layout=box_count&amp;width=50&amp;show_faces=false&amp;action=like&amp;colorscheme=light&amp;font=lucida+grande&amp;height=90" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:50px; height:90px;" allowTransparency="true"></iframe>
-        </div>
-        <div id="gplus">
-          <g:plusone size="tall" href="http://www.emoji-cheat-sheet.com/"></g:plusone>
-        </div>
-      </div>
+      <h3>Campfire also supports a few sounds</h3>
+      <ul id="campfire_sounds" class="buttons clearfix">
+        <li><div>/play secret</div></li>
+        <li><div>/play trombone</div></li>
+        <li><div>/play crickets</div></li>
+        <li><div>/play rimshot</div></li>
+        <li><div>/play vuvuzela</div></li>
+        <li><div>/play tmyk</div></li>
+        <li><div>/play live</div></li>
+        <li><div>/play drama</div></li>
+        <li><div>/play yeah</div></li>
+        <li><div>/play greatjob</div></li>
+        <li><div>/play pushit</div></li>
+        <li><div>/play nyan</div></li>
+        <li><div>/play tada</div></li>
+        <li><div>/play ohmy</div></li>
+        <li><div>/play bueller</div></li>
+        <li><div>/play ohyeah</div></li>
+      </ul>
+    </div>
+    <div class="share">
+      <div><a href="https://twitter.com/share" class="twitter-share-button" data-url="http://www.emoji-cheat-sheet.com/" data-count="vertical">Tweet</a></div>
+      <div><iframe src="//www.facebook.com/plugins/like.php?href=http%3A%2F%2Fwww.emoji-cheat-sheet.com&amp;send=false&amp;layout=box_count&amp;width=50&amp;show_faces=false&amp;action=like&amp;colorscheme=light&amp;font=lucida+grande&amp;height=90" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:50px; height:90px;" allowTransparency="true"></iframe></div>
+      <div><g:plusone size="tall" href="http://www.emoji-cheat-sheet.com/"></g:plusone></div>
     </div>
     <a href="https://github.com/arvida/emoji-cheat-sheet.com"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://a248.e.akamai.net/assets.github.com/img/e6bef7a091f5f3138b8cd40bc3e114258dd68ddf/687474703a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f7265645f6161303030302e706e67" alt="Fork me on GitHub"></a>
     <div id="flash-test"></div>
