share div clearfixed

--- a/public/index.html
+++ b/public/index.html
@@ -565,7 +565,7 @@
         <li><div>/play ohyeah</div></li>
       </ul>
     </div>
-    <div class="share">
+    <div class="share clearfix">
       <div><a href="https://twitter.com/share" class="twitter-share-button" data-url="http://www.emoji-cheat-sheet.com/" data-count="vertical">Tweet</a></div>
       <div><iframe src="//www.facebook.com/plugins/like.php?href=http%3A%2F%2Fwww.emoji-cheat-sheet.com&amp;send=false&amp;layout=box_count&amp;width=50&amp;show_faces=false&amp;action=like&amp;colorscheme=light&amp;font=lucida+grande&amp;height=90" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:50px; height:90px;" allowTransparency="true"></iframe></div>
       <div><g:plusone size="tall" href="http://www.emoji-cheat-sheet.com/"></g:plusone></div>
