--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,7 @@
         <a href="http://37signals.com/basecampnext/">Basecamp Next</a>
         and <a href="http://turntable.fm/">Turntable.fm</a>.<br>
         However some of the emoji codes are not super easy to remember, <em>so here is a little cheat sheet</em>.<br>
-        ✈<b> Got flash enabled? Click the emoji code and it will be copied to your clipboard.</b></p>
+        &#x2708;<b> Got flash enabled? Click the emoji code and it will be copied to your clipboard.</b></p>
       <h2>People</h2>
       <ul id="people" class="buttons clearfix">
         <li><div><img src="/graphics/emojis/bowtie.png"> :bowtie:</div></li>
@@ -577,7 +577,7 @@
         <a href="http://twitter.com/arvid_a">@arvid_a</a> at
         <a href="http://oktavilla.se">Oktavilla</a>. Source code is available on
         <a href="https://github.com/arvida/emoji-cheat-sheet.com">GitHub</a>.</p>
-      <p>❤ Contributors:
+      <p>&#x2764; Contributors:
         <a href="https://github.com/kennethreitz">kennethreitz</a>,
         <a href="https://github.com/skiz">skiz</a>,
         <a href="https://github.com/jstorimer">jstorimer</a>,
@@ -588,8 +588,8 @@
         <a href="https://github.com/joeljunstrom">joeljunstrom</a>,
         <a href="https://github.com/petermanser">petermanser</a>,
         <a href="https://github.com/mattiasottosson">mattiasottosson</a>.</p>
-      <p>✔ Emoji-cheat-sheet.com is not affiliated with 37signals, LLC. or GitHub Inc. in any way.</p>
-      <p>♺ Built using bits from <a href="http://www.steamdev.com/zclip">zClip</a>,
+      <p>&#x2714; Emoji-cheat-sheet.com is not affiliated with 37signals, LLC. or GitHub Inc. in any way.</p>
+      <p>&#x267A; Built using bits from <a href="http://www.steamdev.com/zclip">zClip</a>,
         <a href="http://subtlepatterns.com/">SubtlePatterns</a> and
         <a href="http://www.givainc.com/labs/jnotify_jquery_plugin.htm">jnotify</a>.</p>
     </div>
