--- a/public/index.html
+++ b/public/index.html
@@ -24,16 +24,17 @@
     </script>
   </head>
   <body>
-    <div id="content" class="wrap">
+    <div id="header" class="wrap">
       <h1>Emoji cheat sheet</h1>
-      <p class="intro">
-        <a href="http://en.wikipedia.org/wiki/Emoji">Emoji</a> emoticons are supported on
+      <p><a href="http://en.wikipedia.org/wiki/Emoji">Emoji</a> emoticons are supported on
         <a href="http://campfirenow.com/">Campfire</a>,
         <a href="http://github.com/">GitHub</a>,
         <a href="http://37signals.com/basecampnext/">Basecamp Next</a>
         and <a href="http://turntable.fm/">Turntable.fm</a>.<br>
         However some of the emoji codes are not super easy to remember, <em>so here is a little cheat sheet</em>.<br>
         &#x2708;<b> Got flash enabled? Click the emoji code and it will be copied to your clipboard.</b></p>
+    </div>
+    <div id="content" class="wrap">
       <h2>People</h2>
       <ul id="people" class="buttons clearfix">
         <li><div><img src="/graphics/emojis/bowtie.png"> :bowtie:</div></li>
@@ -595,6 +596,7 @@
     </div>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
     <script src="/libs.min.js?1"></script>
+    <script src="/scripts.js?1"></script>
     <script>
       $(function() {
         if (FlashDetect.installed) {
