added /play deeper

--- a/public/index.html
+++ b/public/index.html
@@ -572,6 +572,7 @@
           <li><div>/play noooo</div></li>
           <li><div>/play heygirl</div></li>
           <li><div>/play inconceivable</div></li>
+          <li><div>/play deeper</div></li>
         </ul>
       </div>
       <div class="share">
@@ -606,7 +607,7 @@
         <a href="https://github.com/mattiasottosson">mattiasottosson</a>,
         <a href="https://github.com/wjessop">wjessop</a>,
         <a href="https://github.com/igorsantos07">igorsantos07</a>,
-        <a href="https://github.com/pyricau">pyricau</a>, 
+        <a href="https://github.com/pyricau">pyricau</a>,
         <a href="https://github.com/JustinCampbell">JustinCampbell</a>,
         <a href="https://github.com/fixlr">fixlr</a>,
         <a href="https://github.com/trevorturk">trevorturk</a>,
