Removes some sounds that did not work in Campfire
I tested all of the sounds out and removed the ones that did nothing.

--- a/public/index.html
+++ b/public/index.html
@@ -921,12 +921,6 @@
       <li><div>/play yodel</div></li>
       <li><div>/play sax</div></li>
       <li><div>/play noooo</div></li>
-      <li><div>/play heygirl</div></li>
-      <li><div>/play inconceivable</div></li>
-      <li><div>/play deeper</div></li>
-      <li><div>/play whoomp</div></li>
-      <li><div>/play clowntown</div></li>
-      <li><div>/play what</div></li>
     </ul>
     <div id="share">
       <div><a href="https://twitter.com/share" class="twitter-share-button" data-url="http://www.emoji-cheat-sheet.com/" data-count="vertical">Tweet</a><script type="text/javascript" src="//platform.twitter.com/widgets.js"></script></div>
@@ -966,7 +960,8 @@
         <a href="https://github.com/vinbarnes">vinbarnes</a>,
         <a href="https://github.com/madasi">madasi</a>,
         <a href="https://github.com/niclasgelin">niclasgelin</a>,
-        <a href="https://github.com/pykler">pykler</a>.
+        <a href="https://github.com/pykler">pykler</a>,
+        <a href="https://github.com/mscottford">mscottford</a>.
       </p>
       <p>
         &#x2714; Emoji-cheat-sheet.com is not affiliated with 37signals, LLC. or GitHub Inc. in any way.
