add some critically important missing emoji

--- a/public/index.html
+++ b/public/index.html
@@ -611,6 +611,11 @@
       <li><div><img src="graphics/emojis/eggplant.png"> :<span class="name">eggplant</span>:</div></li>
       <li><div><img src="graphics/emojis/tomato.png"> :<span class="name">tomato</span>:</div></li>
       <li><div><img src="graphics/emojis/corn.png"> :<span class="name">corn</span>:</div></li>
+      <li><div><img src="graphics/emojis/beer.png"> :<span class="name">beer</span>:</div></li>
+      <li><div><img src="graphics/emojis/beers.png"> :<span class="name">beers</span>:</div></li>
+      <li><div><img src="graphics/emojis/cocktail.png"> :<span class="name">cocktail</span>:</div></li>
+      <li><div><img src="graphics/emojis/tropical_drink.png"> :<span class="name">tropical_drink</span>:</div></li>
+      <li><div><img src="graphics/emojis/wine_glass.png"> :<span class="name">wine_glass</span>:</div></li>
     </ul>
     <h2>Places</h2>
     <ul class="places" id="emoji-places">
