added glitch-chicklet by NBriz

--- a/public/index.html
+++ b/public/index.html
@@ -918,6 +918,7 @@
       <li><div><img src="graphics/emojis/small_red_triangle.png"> :<span class="name">small_red_triangle</span>:</div></li>
       <li><div><img src="graphics/emojis/small_red_triangle_down.png"> :<span class="name">small_red_triangle_down</span>:</div></li>
       <li><div><img src="graphics/emojis/shipit.png"> :<span class="name">shipit</span>:</div></li>
+      <li><div><img src="graphics/emojis/glitch.png"> :<span class="name">glitch</span>:</div></li>
     </ul>
     <h3>Campfire also supports a few sounds</h3>
     <ul id="campfire-sounds">
