--- a/public/index.html
+++ b/public/index.html
@@ -151,6 +151,7 @@
       <li><div><img src="graphics/emojis/clap.png"> :clap:</div></li>
       <li><div><img src="graphics/emojis/muscle.png"> :muscle:</div></li>
       <li><div><img src="graphics/emojis/metal.png"> :metal:</div></li>
+      <li><div><img src="graphics/emojis/fu.png"> :fu:</div></li>
       <li><div><img src="graphics/emojis/walking.png"> :walking:</div></li>
       <li><div><img src="graphics/emojis/runner.png"> :runner:</div></li>
       <li><div><img src="graphics/emojis/running.png"> :running:</div></li>
@@ -948,6 +949,7 @@
       <li><div>/play clowntown</div></li>
       <li><div>/play what</div></li>
       <li><div>/play bezos</div></li>
+      <li><div>/play makeitso</div></li>
     </ul>
     <div id="share">
       <div><a href="https://twitter.com/share" class="twitter-share-button" data-url="http://www.emoji-cheat-sheet.com/" data-count="vertical">Tweet</a><script type="text/javascript" src="//platform.twitter.com/widgets.js"></script></div>
