Added Mexico Flag

--- a/public/index.html
+++ b/public/index.html
@@ -716,6 +716,7 @@
       <li><div><img src="graphics/emojis/us.png"> :<span class="name">us</span>:</div></li>
       <li><div><img src="graphics/emojis/fr.png"> :<span class="name">fr</span>:</div></li>
       <li><div><img src="graphics/emojis/es.png"> :<span class="name">es</span>:</div></li>
+      <li><div><img src="graphics/emojis/mx.png"> :<span class="name">mx</span>:</div></li>
       <li><div><img src="graphics/emojis/it.png"> :<span class="name">it</span>:</div></li>
       <li><div><img src="graphics/emojis/ru.png"> :<span class="name">ru</span>:</div></li>
       <li><div><img src="graphics/emojis/gb.png"> :<span class="name">gb</span>:</div></li>
