--- a/public/index.html
+++ b/public/index.html
@@ -36,9 +36,10 @@
       <a href="https://www.flowdock.com/">Flowdock</a>,
       <a href="https://sprint.ly/">Sprint.ly</a> and
       <a href="http://kandanapp.com">Kandan</a>.<br>
+      <a href="http://kippt.com">Kippt</a>.<br>
       
       However some of the emoji codes are not super easy to remember, <em>so here is a little cheat sheet</em>.<br>
-      &#x2708; <b>Got flash enabled? Click the emoji code and it will be copied to your clipboard.</b>
+      &#x2708; <b>Got Flash enabled? Just click the emoji code and it will be copied to your clipboard.</b>
     </p>
     <h2>People</h2>
     <ul class="people emojis" id="emoji-people">
