--- a/public/index.html
+++ b/public/index.html
@@ -52,6 +52,7 @@
       <a href="https://slack.com/">Slack</a>,
       <a href="https://streamup.com/">Streamup</a>,
       <a href="http://organisedminds.com/">OrganisedMinds</a>,
+      <a href="https://slack.com/">Slack</a>,
       and <a href="https://hackpad.com/">Hackpad</a>.<br>
 
       However some of the emoji codes are not super easy to remember, <em>so here is a little cheat sheet</em>.<br>
