Add link to all contributors

--- a/public/index.html
+++ b/public/index.html
@@ -1027,52 +1027,7 @@
       </p>
       <p>
         &#x2764; Contributors:
-        <a href="https://github.com/kennethreitz">kennethreitz</a>,
-        <a href="https://github.com/skiz">skiz</a>,
-        <a href="https://github.com/jstorimer">jstorimer</a>,
-        <a href="https://github.com/asianmack">asianmack</a>,
-        <a href="https://github.com/kuinak">kuinak</a>,
-        <a href="http://mathiasbynens.be/">mathias</a>,
-        <a href="https://github.com/bryanveloso">bryanveloso</a>,
-        <a href="https://github.com/joeljunstrom">joeljunstrom</a>,
-        <a href="https://github.com/petermanser">petermanser</a>,
-        <a href="https://github.com/mattiasottosson">mattiasottosson</a>,
-        <a href="https://github.com/wjessop">wjessop</a>,
-        <a href="https://github.com/igorsantos07">igorsantos07</a>,
-        <a href="https://github.com/pyricau">pyricau</a>,
-        <a href="https://github.com/JustinCampbell">JustinCampbell</a>,
-        <a href="https://github.com/fixlr">fixlr</a>,
-        <a href="https://github.com/trevorturk">trevorturk</a>,
-        <a href="https://github.com/ejensen">ejensen</a>,
-        <a href="https://github.com/talltroym">talltroym</a>,
-        <a href="https://github.com/juliamae">juliamae</a>,
-        <a href="https://github.com/vinbarnes">vinbarnes</a>,
-        <a href="https://github.com/madasi">madasi</a>,
-        <a href="https://github.com/niclasgelin">niclasgelin</a>,
-        <a href="https://github.com/pykler">pykler</a>,
-        <a href="https://github.com/arunagw">arunagw</a>,
-        <a href="https://github.com/lawa">lawa</a>,
-        <a href="https://github.com/himynameisjonas">himynameisjonas</a>,
-        <a href="https://github.com/martinlissmyr">martinlissmyr</a>,
-        <a href="https://github.com/hassankhan">hassankhan</a>,
-        <a href="https://github.com/leereilly">leereilly</a>,
-        <a href="https://github.com/drewtempelmeyer">drewtempelmeyer</a>,
-        <a href="https://github.com/bitboxer">bitboxer</a>,
-        <a href="https://github.com/mattrobenolt">mattrobenolt</a>,
-        <a href="https://github.com/wdaher">wdaher</a>,
-        <a href="https://github.com/HenrikJoreteg">HenrikJoreteg</a>,
-        <a href="https://github.com/KamranMackey">KamranMackey</a>,
-        <a href="https://github.com/fusion94">fusion94</a>,
-        <a href="https://github.com/rocketslide">rocketslide</a>,
-        <a href="https://github.com/streeter">streeter</a>,
-        <a href="https://github.com/pjaspers">pjaspers</a>,
-        <a href="https://github.com/bhellman1">bhellman1</a>,
-        <a href="https://github.com/take">take</a>,
-        <a href="https://github.com/nicholasserra">nicholasserra</a>,
-        <a href="https://github.com/MichaelBanks">MichaelBanks</a>,
-        <a href="https://github.com/GrahamCampbell">GrahamCampbell</a>,
-        <a href="https://github.com/hnrc">hnrc</a>, and
-        <a href="https://github.com/awesomerobot">awesomerobot</a>.
+        See [here](https://github.com/arvida/emoji-cheat-sheet.com/graphs/contributors) all contributors.
 
       </p>
       <p>
