More credit to the contributors

--- a/public/index.html
+++ b/public/index.html
@@ -1026,9 +1026,7 @@
         <a href="https://github.com/arvida/emoji-cheat-sheet.com">GitHub</a>.
       </p>
       <p>
-        &#x2764; Contributors:
-        See [here](https://github.com/arvida/emoji-cheat-sheet.com/graphs/contributors) all contributors.
-
+        &#x2764; View all the super awesome people that have contributed to this page on <a href="https://github.com/arvida/emoji-cheat-sheet.com/graphs/contributors">the GitHub contributors page</a>.
       </p>
       <p>
         &#x2714; Emoji-cheat-sheet.com is not affiliated with 37signals, LLC. or GitHub Inc. in any way.
