Ello support emojis

--- a/public/index.html
+++ b/public/index.html
@@ -65,7 +65,8 @@
       <a href="https://quip.com">Quip</a>,
       <a href="https://andbang.com">And Bang</a>,
       <a href="https://bonus.ly">Bonusly</a>,
-      and <a href="https://discourse.org">Discourse</a>.<br>
+      <a href="https://discourse.org">Discourse</a>
+      and <a href="https://ello.co">Ello</a>.<br>
     </p>
     <p>
       However some of the emoji codes are not super easy to remember, <em>so here is a little cheat sheet</em>.<br>
