--- a/public/index.html
+++ b/public/index.html
@@ -72,6 +72,13 @@
       However some of the emoji codes are not super easy to remember, <em>so here is a little cheat sheet</em>.<br>
       &#x2708; <b>Got flash enabled? Click the emoji code and it will be copied to your clipboard.</b>
     </p>
+    <div id="mostOftenCopiedEmojis" style="display: none;">
+      <h2>Favorites</h2>
+      <p>These are the emojis you copy the most often.</p>
+      <ul class="emojis">
+        
+      </ul>
+    </div>
     <h2>People</h2>
     <ul class="people emojis" id="emoji-people">
       <li><div><img src="graphics/emojis/bowtie.png"> :<span class="name">bowtie</span>:</div></li>
