Compacted the favorites list and implemented cookie store
The list now renders top five emojis, which is equal to one row of emoji
using the current style. Forget link was removed and instead a global
erase link is used. Cookies are now used as an alternative storage. Copy
count were reworked to be relative to the list item so they don't share
the save <div> (and the copy count text is not copied with the emoji
code) but also don't break the line.

--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+﻿<!doctype html>
 <html lang="en">
   <head>
     <title>Emoji cheat sheet for Campfire and GitHub</title>
@@ -74,7 +74,7 @@
     </p>
     <div id="mostOftenCopiedEmojis" style="display: none;">
       <h2>Favorites</h2>
-      <p>These are the emojis you copy the most often.</p>
+      <p>These are the emojis you copy the most often. You can click <a id="eraseLink" href="#" onclick="return false;">here</a> to erase your favorites.</p>
       <ul class="emojis">
         
       </ul>
