add twemoji awesome

--- a/public/index.html
+++ b/public/index.html
@@ -66,7 +66,8 @@
       <a href="https://andbang.com">And Bang</a>,
       <a href="https://bonus.ly">Bonusly</a>,
       <a href="https://discourse.org">Discourse</a>
-      and <a href="https://ello.co">Ello</a>.<br>
+      <a href="https://ello.co">Ello</a>.<br>,
+      and <a href="http://ellekasai.github.io/twemoji-awesome/">Twemoji Awesome</a>.<br>
     </p>
     <p>
       However some of the emoji codes are not super easy to remember, <em>so here is a little cheat sheet</em>.<br>
