--- a/public/index.html
+++ b/public/index.html
@@ -66,7 +66,7 @@
       <a href="https://andbang.com">And Bang</a>,
       <a href="https://bonus.ly">Bonusly</a>,
       <a href="https://discourse.org">Discourse</a>
-      <a href="https://ello.co">Ello</a>.<br>,
+      <a href="https://ello.co">Ello</a><br>,
       and <a href="http://ellekasai.github.io/twemoji-awesome/">Twemoji Awesome</a>.<br>
     </p>
     <p>
