--- a/public/index.html
+++ b/public/index.html
@@ -67,7 +67,8 @@
       <a href="https://bonus.ly">Bonusly</a>,
       <a href="https://discourse.org">Discourse</a>,
       <a href="https://ello.co">Ello</a>,
-      and <a href="http://ellekasai.github.io/twemoji-awesome/">Twemoji Awesome</a>.<br>
+      <a href="http://ellekasai.github.io/twemoji-awesome/">Twemoji Awesome</a>,
+      and <a href="http://gotchosen.com">Got Chosen</a>.<br>
     </p>
     <p>
       However some of the emoji codes are not super easy to remember, <em>so here is a little cheat sheet</em>.<br>
