--- a/public/index.html
+++ b/public/index.html
@@ -68,7 +68,8 @@
       <a href="https://discourse.org">Discourse</a>,
       <a href="https://ello.co">Ello</a>,
       <a href="http://ellekasai.github.io/twemoji-awesome/">Twemoji Awesome</a>,
-      and <a href="http://gotchosen.com">Got Chosen</a>.<br>
+      <a href="http://gotchosen.com">Got Chosen</a>,
+      and <a href="https://www.getflow.com">Flow</a>.
     </p>
     <p>
       However some of the emoji codes are not super easy to remember, <em>so here is a little cheat sheet</em>.<br>
