Add esa to supported services

--- a/public/index.html
+++ b/public/index.html
@@ -70,7 +70,8 @@
       <a href="http://ellekasai.github.io/twemoji-awesome/">Twemoji Awesome</a>,
       <a href="http://gotchosen.com">Got Chosen</a>,
       <a href="https://www.getflow.com">Flow</a>,
-      and <a href="https://readme.io">ReadMe.io</a>.
+      <a href="https://readme.io">ReadMe.io</a>,
+      and <a href="https://esa.io">esa</a>.<br>
     </p>
     <p>
       However some of the emoji codes are not super easy to remember, <em>so here is a little cheat sheet</em>.<br>
