--- a/public/index.html
+++ b/public/index.html
@@ -36,7 +36,7 @@
       <a href="https://www.flowdock.com/">Flowdock</a>,
       <a href="https://sprint.ly/">Sprint.ly</a>,
       <a href="http://kandanapp.com">Kandan</a>,
-      <a href="https://textbox.io/">Textbox.io</a>,
+      <a href="http://textbox.io/">Textbox.io</a>,
       <a href="http://kippt.com">Kippt</a>,
       <a href="https://github.com/tmy/redmine_gemoji">Redmine</a>,
       <a href="http://about.jabbr.net/">JabbR</a>,
