--- a/public/index.html
+++ b/public/index.html
@@ -67,7 +67,7 @@
       <a href="https://discourse.org">Discourse</a>,
       <a href="https://ello.co">Ello</a>,
       <a href="http://ellekasai.github.io/twemoji-awesome/">Twemoji Awesome</a>,
-      <a href="http://gotchosen.com">Got Chosen</a>,
+      <a href="http://gotchosen.com">Got Chosen</a>
       and <a href="https://www.DBook.org">DBook</a>.<br>
     </p>
     <p>
