Fixed a very small capitalization error.

--- a/public/index.html
+++ b/public/index.html
@@ -42,7 +42,7 @@
       <a href="http://about.jabbr.net/">JabbR</a>,
       <a href="https://trello.com/">Trello</a>,
       <a href="https://hall.com">Hall</a>,
-      <a href="http://plug.dj/">plug.dj</a>,
+      <a href="http://plug.dj/">Plug.dj</a>,
       <a href="http://qiita.com/">Qiita</a>,
       <a href="http://www.zendesk.com/">Zendesk</a>,
       <a href="http://ruby-china.org/">Ruby China</a>,
