--- a/public/index.html
+++ b/public/index.html
@@ -71,8 +71,9 @@
       <a href="http://gotchosen.com">Got Chosen</a>,
       <a href="https://www.getflow.com">Flow</a>,
       <a href="https://readme.io">ReadMe.io</a>,
-      <a href="https://esa.io">esa</a>
-      and <a href="https://www.DBook.org">DBook</a>.<br>
+      <a href="https://esa.io">esa</a>,
+      <a href="https://www.DBook.org">DBook</a>
+      and <a href="https://groups.io">Groups.io</a>.<br>
     </p>
     <p>
       However some of the emoji codes are not super easy to remember, <em>so here is a little cheat sheet</em>.<br>
