Three new sounds in Campfire

--- a/public/index.html
+++ b/public/index.html
@@ -1018,6 +1018,9 @@
       <li><div data-sound="guarantee">/play guarantee</div></li>
       <li><div data-sound="unix">/play unix</div></li>
       <li><div data-sound="letitgo">/play letitgo</div></li>
+      <li><div data-sound="wups">/play wups</div></li>
+      <li><div data-sound="flawless">/play flawless</div></li>
+      <li><div data-sound="butts">/play butts</div></li>
     </ul>
     <div id="share">
       <div><a href="https://twitter.com/share" class="twitter-share-button" data-url="http://www.emoji-cheat-sheet.com/" data-count="vertical">Tweet</a><script type="text/javascript" src="//platform.twitter.com/widgets.js"></script></div>
