--- a/public/index.html
+++ b/public/index.html
@@ -73,8 +73,9 @@
       <a href="https://readme.io">ReadMe.io</a>,
       <a href="https://esa.io">esa</a>,
       <a href="https://www.DBook.org">DBook</a>,
-      <a href="https://groups.io">Groups.io</a>
-      and <a href="https://www.teamwork.com/chat">TeamworkChat</a>.<br>
+      <a href="https://groups.io">Groups.io</a>,
+      <a href="https://www.teamwork.com/chat">TeamworkChat</a>
+      and <a href="https://www.bugtrack.in">Damn Bugs</a>.<br>
     </p>
     <p>
       However some of the emoji codes are not super easy to remember, <em>so here is a little cheat sheet</em>.<br>
